# warp-aloe-fork

./: .gitignore  Cargo.toml  helm.cloudflare.json
.Jules/: palette.md  sentinel.md
.agents/skills/deep-research/: SKILL.md
.agents/skills/web-agent/: SKILL.md
.claude/: settings.json
.codex/: ecc-install-state.json
.jules/: bolt.md  palette.md  sentinel.md
app/: Cargo.toml  build.rs
app/src/: root_view.rs
app/src/ai/agent_management/: agent_type_selector.rs  cloud_setup_guide_view.rs
app/src/ai/agent_sdk/: audit.rs  driver.rs  environment.rs  mod.rs  skills_marketplace.rs  telemetry.rs
app/src/ai/agent_sdk/driver/: budget_enforcer.rs  local_orchestrator.rs  provider_caps.rs
app/src/ai/cloud_environments/: helm_routing.rs  mod.rs
app/src/ai/mcp/templatable_manager/: native.rs
app/src/settings/: ai.rs  ai_tests.rs
app/src/settings_view/: ai_page.rs  appearance_page.rs  cli_agent_sign_in_widget.rs  doppler_page.rs  mod.rs  mod_test.rs  platform_page.rs  settings_page.rs  web_research_page.rs
app/src/terminal/: profile_model_selector.rs  view.rs
app/src/view_components/: action_button.rs
app/src/workspace/: cli_install.rs  view.rs
cloudflare-control-plane/: Dockerfile.agent-runtime  README.md  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wrangler.agent-runtime.toml  wrangler.control-plane.toml  wrangler.workflows.toml
cloudflare-control-plane/docs/: agent-runtime-container.md  d1-schema.md
cloudflare-control-plane/migrations/: 0000_init.sql
cloudflare-control-plane/migrations/meta/: 0000_snapshot.json  _journal.json
cloudflare-control-plane/schema/: helm.cloudflare.schema.json
cloudflare-control-plane/scripts/: agent-entrypoint.sh  build-agent-runtime.sh
cloudflare-control-plane/src/cli/: helm.ts
cloudflare-control-plane/src/db/: index.ts  schema.ts
cloudflare-control-plane/src/shared/: auth.ts  cloudflare.ts  http.ts  manifest.ts  share_auth.ts  webhooks.ts
cloudflare-control-plane/src/workers/: agent-runtime.ts  app.ts  audit_mirror.ts  control-plane.ts
cloudflare-control-plane/src/workers/durable-objects/: index.ts  protocol.ts  repo-do.ts  session-do.ts  swarm-do.ts  user-do.ts
cloudflare-control-plane/src/workers/workflows/: deploy-workflow.ts  index.ts  scheduled-task-workflow.ts  swarm-workflow.ts  types.ts  watchdog-workflow.ts
cloudflare-control-plane/test/: agent-runtime-container.test.ts  audit-cleanup.test.ts  audit-mirror.test.ts  auth.test.ts  control-plane-routes.test.ts  db-schema.test.ts  manifest.test.ts  repro_vulnerability.test.ts  security-audit-sync.test.ts  security.test.ts  share-routes.test.ts  webhooks.test.ts
cloudflare-control-plane/test/durable-objects/: in-memory-state.ts  protocol.test.ts  session-do.test.ts  stubs.test.ts  user-do.test.ts
cloudflare-control-plane/test/workflows/: cloudflare-workers-stub.ts  orchestration.test.ts  worker-routing.test.ts
cloudflare-mcp/: wrangler.toml
cloudflare-mcp/src/: index.ts
crates/agents/: Cargo.toml
crates/agents/src/: claude_code.rs  codex.rs  foundation_models.rs  gateway.rs  lib.rs
crates/agents/tests/: foundation_models.rs  gateway.rs
crates/ai_gateway_config/: Cargo.toml
crates/ai_gateway_config/src/: lib.rs
crates/auto_healing/: Cargo.toml
crates/auto_healing/src/: audit_log.rs  deploy_gate.rs  diff_size.rs  lib.rs  test_deletion.rs
crates/auto_healing/tests/: integration.rs
crates/cloud_client/: Cargo.toml
crates/cloud_client/src/: agent.rs  error.rs  lib.rs  reconnect.rs  session.rs  tests.rs  transport.rs
crates/cloud_protocol/: Cargo.toml
crates/cloud_protocol/src/: lib.rs
crates/cron_scheduler/: Cargo.toml
crates/cron_scheduler/src/: lib.rs
crates/doppler/src/: lib.rs  runner.rs
crates/doppler_mcp/src/: metadata.rs  server.rs
crates/foundation_models/: Cargo.toml  build.rs
crates/foundation_models/src/: chain.rs  ffi.rs  generable.rs  lib.rs
crates/foundation_models/swift/: FoundationModelsBridge.swift
crates/fuzzy_match/src/: fuzzy_test.rs  lib.rs
crates/github_webhook_receiver/: Cargo.toml
crates/github_webhook_receiver/src/: lib.rs
crates/helm_cloud_client/: Cargo.toml
crates/helm_cloud_client/src/: audit.rs  auth.rs  client.rs  config.rs  event.rs  lib.rs
crates/helm_cloud_client/tests/: http_client.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  router.rs
crates/orchestrator/tests/: fault_injection.rs
crates/simulator_hooks/: Cargo.toml
crates/simulator_hooks/src/: commands.rs  error.rs  lib.rs  platform.rs
crates/simulator_hooks/tests/: end_to_end.rs
crates/skills/src/: lib.rs
crates/skills/tests/: loader.rs
crates/soak_harness/: Cargo.toml
crates/soak_harness/src/: board.rs  faults.rs  fixtures.rs  invariants.rs  lib.rs  main.rs  metrics.rs  runner.rs  synthetic_agent.rs
crates/soak_harness/tests/: smoke_soak.rs
crates/symphony/: Cargo.toml
crates/symphony/src/: approval_poller.rs  audit.rs  deploy_tool.rs  lib.rs  linear_graphql.rs  main.rs  numstat.rs  orchestrator.rs  reload.rs  simulator_tool.rs  tracker.rs  triggers.rs  workflow.rs
crates/symphony/tests/: deploy_tool.rs  linear_graphql_tool.rs  workflow_reload.rs
crates/warp_cli/: Cargo.toml
crates/warp_cli/src/: audit.rs  audit_tests.rs  lib.rs  lib_tests.rs  skills.rs  skills_tests.rs
crates/warp_util/src/: path.rs  path_test.rs
docs/observability/dashboards/: helm-overview.json
docs/soak/: PDX-29-runbook.md
templates/helm-starter-skills/: README.md  template.toml
templates/helm-starter-skills/ai-gateway-routing/: SKILL.md
templates/helm-starter-skills/doppler-secret-fetch/: SKILL.md
templates/helm-starter-skills/drizzle-migration/: SKILL.md
templates/helm-starter-skills/warp-new-scaffolding/: SKILL.md
templates/helm-starter-skills/wrangler-deploy/: SKILL.md
tools/web-research/: .env.example  README.md  package.json
tools/web-research/src/: deep-research.mjs  firecrawl.mjs  llm.mjs  web-agent.mjs
