[package]
name = "agents"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
orchestrator = { workspace = true }
foundation_models = { workspace = true }
ai_gateway_config = { path = "../ai_gateway_config" }
doppler = { workspace = true }
async-trait.workspace = true
async-stream.workspace = true
chrono = { workspace = true }
futures-core = "0.3.31"
dirs = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "process",
    "sync",
    "macros",
    "io-util",
] }
tracing.workspace = true
which = "4.4"

[dev-dependencies]
ai_gateway_config = { path = "../ai_gateway_config" }
futures-util = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "process",
    "time",
    "test-util",
] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
which = "4.4"
