[package]
name = "ai_gateway_config"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
thiserror.workspace = true
toml = "0.8"
tracing.workspace = true
dirs = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
