[package]
name = "foundation_models"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

# Foundation Models Swift bridge (PDX-13).
#
# This crate provides a Rust FFI binding to Apple's on-device Foundation
# Models framework via a thin Swift static library that exposes a C ABI.
# The crate is macOS-only; on every other target the public API is a stub
# that always reports the runtime as unavailable, so callers can use a
# single API across platforms and degrade gracefully.
#
# Down the chain:
#   * PDX-14 builds the MCP-tool-to-`Generable` translator on top of this.
#   * PDX-15 builds the chained-execution loop using the streaming API.
#   * PDX-16 wires `Provider::FoundationModels` in the orchestrator router.
#
# This crate intentionally does **not** depend on `orchestrator` and
# `orchestrator` does not depend on this crate yet — that integration is
# PDX-16's job.

[dependencies]
thiserror.workspace = true
# `generable` (PDX-14) lives in this crate as a sibling module to the FFI
# bridge. It only needs serde for the JSON Schema input and sha2 to hash
# the generated Swift source for caching by the future FM compile loop —
# no `tokio`, no `rmcp`, by design (see module docs).
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
# Tests here are deliberately tiny: a capability probe plus FFI-pointer
# round-trips that don't require an actual Foundation Models runtime,
# plus golden-string assertions on the JSON-Schema-to-Swift translator.
serde_json = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }
