[package]
name = "simulator_hooks"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
publish.workspace = true

# macOS-only crate. On non-macOS platforms the crate compiles but exposes
# nothing — see `src/lib.rs` `cfg(target_os = "macos")` gate.
[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "sync",
] }
tokio-stream = "0.1"
async-stream = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
