[package]
name = "soak_harness"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Symphony soak-test harness for PDX-29 [D6] 24/7 weekend test"

[lib]
name = "soak_harness"
path = "src/lib.rs"

[[bin]]
name = "soak_harness"
path = "src/main.rs"

[dependencies]
symphony = { workspace = true }
orchestrator = { workspace = true }

tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "signal",
    "io-util",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "test-util",
] }
