[package]
name = "symphony"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "symphony"
path = "src/main.rs"

[dependencies]
orchestrator = { workspace = true }
agents = { workspace = true }
auto_healing = { workspace = true }
# PDX-113: simulator_hooks is consumed only on macOS — on other platforms
# the dep compiles to an empty stub (the crate gates its surface with
# cfg(target_os = "macos"))). Listed unconditionally so the workspace
# resolver always sees the same graph.
simulator_hooks = { workspace = true }
doppler = { workspace = true }
cron_scheduler = { workspace = true }
github_webhook_receiver = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
    "sync",
    "time",
    "io-util",
    "signal",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
liquid = "0.26"
reqwest = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-stream = "0.1"
notify-debouncer-full = { workspace = true }
# rustls 0.23 requires an explicit crypto provider; reqwest's rustls-tls feature
# in this workspace doesn't auto-install one. We install ring at startup in main.rs.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tempfile = { workspace = true }
mockall = "0.13"
tokio-test = "0.4"
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "test-util",
] }
